syntax = "proto3";

package kv;

service KV {
  rpc InsertValue(InsertValueRequest) returns (InsertValueResponse) {}
  rpc GetValue(GetValueRequest) returns (GetValueResponse) {}
}

message InsertValueRequest {
  string key = 1;
  string value = 2;
}

message InsertValueResponse {
  bool success = 1;
}

message GetValueRequest {
  string key = 1;
}

message GetValueResponse {
  string value = 1;
}